# rustmath

./: Cargo.toml  LICENSE  README.md  Trunk.toml
.github/workflows/: rust.yml
build-test/: Cargo.toml
build-test/src/: main.rs
ci/: deploy-demo.py
demo/: Cargo.toml  index.html
demo/src/: main.rs  uploader.rs
demo/styles/: google-fonts.scss  main.css  main.scss
rustmath/: Cargo.toml
rustmath/src/: backend.rs  common.rs  layout.rs  lib.rs  main.rs  mathlist.rs  parser.rs  test_generated_sources.rs  tests.rs
rustmath/src/backend/: opentype.rs  raster.rs  svg.rs
rustmath/src/backend/svg/: svg_core.rs  xml.rs
rustmath/src/common/: construction.rs  font_params.rs
rustmath/src/mathlist/: layout_helper.rs
rustmath/src/parser/: char_classification.rs  error.rs  tables.rs
rustmath/src/parser/char_classification/: generated.rs
rustmath/src/tests/: test_generated_sources.rs  test_images.rs  test_svg.rs
src/: common.rs  layout.rs  main.rs  mathlist.rs
