[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
strip = true        # Strip symbols from binary*

[workspace]
resolver = "2"
default-members = [
    "rustmath",
]

members = [
    "demo",
    "rustmath",
]