[package]
name = "rustmath-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "a4b4252" }
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus.git", rev = "a4b4252" }
gloo-console = "0.2.3"
js-sys = "0.3.61"
rustmath = { version = "0.1.0", path = "../rustmath" }
tiny-skia = "0.11.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
web-sys = "0.3.61"
