[package]
name = "rustmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.3"
png = "0.17.9"
tiny-skia = { version = "0.11.0", default-features = false, features=["std"] }
ttf-parser = "0.19.0"

[dev-dependencies]
rangemap = "1.3.0"
resvg = { version = "0.35.0", default-features = false }
usvg = { version = "0.35.0", default-features = false }
