[package]
name = "rustmath"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["png"]
png = ["dep:png", "tiny-skia"]

[dependencies]
nom = "7.1.3"
png = { version = "0.17.9", optional = true }
tiny-skia = { version = "0.11.0", default-features = false, features=["std"], optional = true }
ttf-parser = "0.19.0"

[dev-dependencies]
rangemap = "1.3.0"
